# text2audio

./: .gitignore  README.md  example.dot.env  pyproject.toml  text2audio.py  text2audio_original.py
examples/: control-rhythm-text2audio.md  description-text2audio.md
text2audio/: __init__.py  __main__.py  cli.py  model.py  ui.py
